# cortex-api

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
cortex_api/: main.py
cortex_api/routers/: objectDetection.py
