[project]
name = "cortex-api"
version = "0.1.0"
description = "Houses APIs which will provide model inferences"
authors = [{ name = "Jing Xuan Goh", email = "gohjx8808@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tensorflow (>=2.20.0,<3.0.0)",
    "ultralytics (>=8.3.195,<9.0.0)",
    "fastapi[standard] (>=0.116.1,<0.117.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.37.0"
ruff = "^0.12.12"
pre-commit = "^4.3.0"

[tool.poe.tasks]
dev = "fastapi dev cortex_api/main.py"

[tool.ruff]
# Directories to lint
src = ["src", "tests"]

# Line length (consistent with black)
line-length = 88

# Enable/disable rule sets
lint.select = ["E", "F", "I"]   # E = pycodestyle, F = pyflakes, I = import sorting
lint.ignore = ["E501"]          # example: ignore long-line warning

# Fix imports automatically
lint.fixable = ["ALL"]

# Allow Ruff to act like isort
lint.extend-select = ["I"]

# Exclude common project dirs
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "build",
    "dist"
]

# Formatter config (like Black)
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false